# pallas-forge

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  LICENSE  MANIFEST.in  PUBLISHING.md  README.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
benchmarks/: bench_matmul.py  bench_rmsnorm.py  bench_swiglu.py  run_all.py
notebooks/: 01_tiled_matmul.ipynb  02_fused_rmsnorm.ipynb  03_swiglu_geglu.ipynb  04_auto_tuning.ipynb  05_reproduce_figures.ipynb
pallas_forge/: __init__.py  _compat.py
pallas_forge/kernels/: __init__.py  _utils.py  matmul.py  rmsnorm.py  swiglu.py
pallas_forge/profile/: __init__.py  analysis.py  roofline.py
pallas_forge/tune/: __init__.py  config.py  report.py  runner.py  search.py  trace.py
tests/: conftest.py  test_matmul.py  test_report.py  test_rmsnorm.py  test_swiglu.py  test_tune_config.py  test_tune_runner.py  test_tune_search.py
